<resources>
    <string name="app_name">car_sharing</string>
    <string name="reg">Регистрация</string>
    <string name="drivenext">DriveNext</string>
    <string name="title_activity_reg_start">activity_reg_start</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="nameOfApp">DriveNext</string>
    <string name="slogan">Поможем найти твою следующую поездку</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inputbutton">Войдите в аккаунт</string>
    <string name="txtplease">Пожалуйста, введите свои данные</string>
    <string name="getemail">Введите электронную почту</string>
    <string name="getpassword">Введите пароль</string>
    <string name="btnforgetpassword">Забыли пароль?</string>
    <string name="signup">Войти</string>
    <string name="registr">Зарегистрироваться</string>
    <string name="sighgoogle">Войти через Google</string>
    <string name="google_logodscption">Google Logo</string>
    <string name="password">Пароль</string>
    <string name="noconnection">Нет подключения</string>
    <string name="btncheckconnection">Проверьте подключение и повторите попытку</string>
    <string name="tryagain">Повторить попытку</string>
    <string name="finalfraze">Пользуйтесь с удовольствием</string>
    <string name="finalfrazebig">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="btnfinalfraze">Поехали</string>
    <string name="creatingacc">Создание аккаунта</string>
    <string name="repeatpassword">Повторите пароль</string>
    <string name="confrim">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="gonext">Далее</string>
    <string name="email">Электронная почта</string>
    <string name="givepas">Придумайте пароль</string>
    <string name="getname">Введите имя</string>
    <string name="getsecondname">Введите фамилию</string>
    <string name="getthirdname">Введите отчество</string>
    <string name="getbirthdate">Введите дату рождения</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="birthdate">Дата Рождения</string>
    <string name="thirdname">Отчество</string>
    <string name="secondname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="textgetphoto">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="numberdriverlicense">Номер водительского удостоверения</string>
    <string name="uploadphoto">Загрузить фото</string>
    <string name="getphtodriverlicence">Загрузите фото водительского удостоверения</string>
    <string name="getpassportphoto">Загрузите фото паспорта</string>
    <string name="safetyandconviniece">Безопасно и удобно</string>
    <string name="rentthecarandenjoy">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="rentingcar">Аренда автомобилей</string>
    <string name="opennewability">Открой для себя удобный и доступный способ передвижения</string>
</resources>